fix: footer layout - brand left, nav center, social right aligned

--- a/website/src/components/Footer/Footer.module.scss
+++ b/website/src/components/Footer/Footer.module.scss
@@ -90,8 +90,10 @@
   gap: 24px 40px;
 
   @media (min-width: 1024px) {
+    align-items: flex-start;
     flex-direction: row;
     gap: 30px;
+    justify-content: space-between;
   }
 
   @media (min-width: 1400px) {
@@ -113,12 +115,6 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  flex-basis: 100%;
-
-  @media (min-width: 1024px) {
-    flex-basis: calc(25% - 23px);
-    flex-shrink: 0;
-  }
 }
 
 .footer__logo {
@@ -150,15 +146,13 @@
 .footer__nav {
   display: flex;
   flex-direction: column;
-  flex-basis: 100%;
   gap: 0;
   padding-top: 36px;
 
   @media (min-width: 1024px) {
-    flex-basis: calc(50% - 20px);
     flex-direction: row;
     gap: 30px;
-    justify-content: space-between;
+    justify-content: center;
     padding-top: 0;
   }
 
@@ -248,12 +242,9 @@
 
 // Social
 .footer__social {
-  flex-basis: 100%;
-
   @media (min-width: 1024px) {
-    flex-basis: calc(25% - 23px);
-    flex-shrink: 0;
     padding-bottom: 0;
+    text-align: right;
   }
 }
 
